assets/styles/style.css
/* ---------- FOR MAIN PAGE ---------- */
/* Primary button blue: #0D6EFD */
.gradient-background {
  background: linear-gradient(45deg, black, navy, purple);
  background-size: 180% 180%;
  animation: gradient-animation 18s ease infinite;
}

.feature-icon-small {
  width: 3rem;
  height: 3rem;
}

/* ---------- FOR RESUME PAGE ---------- */
.badges {
  display: inline-block;
  max-width: 7rem;
  aspect-ratio: 1/1;
}

